update to (much less experimental) error_prone_ant-2.0.21